<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".LoginActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <ImageView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:gravity="center"
        android:keepScreenOn="true"
        android:scaleType="fitXY"
        android:src="@drawable/background" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="242dp"
                android:layout_height="56dp"/>

            <ToggleButton
                android:id="@+id/sign_in_toggle"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textOff="@string/sign_in"
                android:textOn="@string/sign_up" />

            <EditText
                android:id="@+id/username_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/password_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/password_confirm_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

            <TextView
                android:id="@+id/username_taken_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_taken"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/password_failure_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwords_do_not_match"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/no_match_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_match"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/success_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/success"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

    </FrameLayout>


</FrameLayout>
